# youth-activity-scheduler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.macos.yml  docker-compose.smoke.yml  docker-compose.yml  popover-snapshot.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-30T00-27-03-490Z.yml  page-2026-04-30T00-27-23-250Z.yml  page-2026-04-30T00-27-38-790Z.yml  page-2026-04-30T00-27-52-744Z.yml  page-2026-04-30T02-41-10-933Z.yml  page-2026-04-30T02-41-29-372Z.yml  page-2026-04-30T02-41-45-686Z.yml  page-2026-04-30T02-42-47-859Z.yml  page-2026-04-30T02-42-56-481Z.yml  page-2026-04-30T02-43-08-493Z.yml  page-2026-04-30T02-43-22-288Z.yml  page-2026-04-30T02-43-32-506Z.yml  page-2026-04-30T02-43-58-532Z.yml  page-2026-04-30T02-44-14-946Z.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_geocode_attempts.py  0003_pushover_config_json.py  0004_alert_close.py  0005_drive_time_cache.py  0006_kid_max_drive_minutes.py
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: deep-link.spec.ts  inbox.spec.ts  kid-matches.spec.ts
frontend/src/: main.tsx  routeTree.gen.ts
scripts/: e2e_phase5a.sh  seed_e2e.py  smoke_phase2.sh  smoke_phase3.sh  smoke_phase3_5.sh  smoke_phase4.sh
src/yas/: __init__.py  __main__.py  config.py  health.py  logging.py
tests/fakes/: geocoder.py  llm.py  notifier.py  smtp_server.py
tests/fixtures/: server.py
tests/integration/: test_alerts_delivery_loop.py  test_alerts_detector_loop.py  test_alerts_digest_loop.py  test_alerts_enqueuer_mute.py  test_alerts_pipeline_integration.py  test_api_alert_routing.py  test_api_alerts.py  test_api_alerts_close.py  test_api_digest_preview.py  test_api_discover.py  test_api_enrollments.py  test_api_household.py  test_api_inbox.py  test_api_kids.py  test_api_kids_calendar.py  test_api_matches.py  test_api_notifier_test.py  test_api_offerings.py  test_api_site_crawls.py  test_api_sites.py  test_api_unavailability.py  test_api_watchlist.py  test_discover_orchestrator.py  test_enricher.py  test_fixture_server.py  test_health.py  test_matcher.py  test_migrations.py  test_models_roundtrip.py  test_pipeline.py  test_playwright_fetcher.py  test_scheduler.py  test_spa_fallback.py  test_worker_loops.py
tests/unit/: test_alerts_channel_base.py  test_alerts_detectors.py  test_alerts_digest_builder.py  test_alerts_digest_filters.py  test_alerts_digest_llm_summary.py  test_alerts_email_channel.py  test_alerts_enqueuer.py  test_alerts_ntfy_channel.py  test_alerts_pushover_channel.py  test_alerts_rate_limit.py  test_alerts_routing.py  test_aliases.py  test_calendar_occurrences.py  test_change_detector.py  test_config.py  test_db_session.py  test_discovery_classifier.py  test_discovery_filters.py  test_discovery_heads.py  test_discovery_links.py  test_discovery_sitemap.py  test_distance.py  test_gates.py  (+20 more)
(+289 files in other folders)
