[project]
name = "yas"
version = "0.1.0"
description = "Youth Activity Scheduler — self-hosted crawler + alerter for youth program sites"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "anthropic>=0.25.0",
  "jinja2>=3.1.3",
  "python-multipart>=0.0.9",
  "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-requests",
  "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yas"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/yas"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=yas --cov-report=term-missing"
