[project]
name = "yas"
version = "0.1.0"
description = "Youth Activity Scheduler — self-hosted crawler + alerter for youth program sites"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "sqlalchemy[asyncio]==2.0.49",
  "alembic==1.18.4",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "httpx==0.28.1",
  "structlog==25.5.0",
  "anthropic==0.97.0",
  "jinja2==3.1.6",
  "python-multipart==0.0.27",
  "aiosqlite==0.22.1",
  "selectolax==0.4.7",
  "playwright==1.59.0",
  "aiosmtplib==5.1.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "respx==0.23.1",
  "ruff==0.15.12",
  "mypy==1.20.2",
  "types-requests==2.33.0.20260408",
  "pre-commit==4.6.0",
  "aiohttp==3.13.5",
  "aiosmtpd==1.4.6",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yas"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/yas"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=yas --cov-report=term-missing"
